# tg-bot

./: .gitignore  api_client.py  app.py  handlers_bots.py  handlers_notify.py  handlers_schedules.py  handlers_settings.py  imperal.json  main.py  manifest.json  panels_main.py  panels_side.py  params.py  pyproject.toml  skeleton.py  tgbot_api.py
tests/: test_bots.py  test_schedules.py
